# prime_Yuchen_An

./: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/prime_ya2516/: index.doctree
docs/_build/doctrees/autoapi/prime_ya2516/prime_ya2516/: index.doctree
docs/_build/doctrees/source/: modules.doctree  prime_ya2516.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/prime_ya2516/: prime_ya2516.html
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/prime_ya2516/: index.rst.txt
docs/_build/html/_sources/autoapi/prime_ya2516/prime_ya2516/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/prime_ya2516/: index.html
docs/_build/html/autoapi/prime_ya2516/prime_ya2516/: index.html
docs/_build/html/source/: modules.html  prime_ya2516.html
docs/_build/jupyter_execute/: example.ipynb
docs/source/: modules.rst  prime_ya2516.rst
prime_ya2516/: README.md  pyproject.toml
prime_ya2516/docs/: make.bat
prime_ya2516/src/prime_ya2516/: __init__.py
prime_ya2516/tests/: test_prime_ya2516.py
src/prime_ya2516/: prime_ya2516.py
tests/: test_prime_ya2516.py
