[tool.poetry]
name = "prime_ya2516"
version = "0.1.0"
description = "python package for determining prime numbers"
authors = ["Yuchen An"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^4.1.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^1.3.0"
myst-nb = "1.0.0rc0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
