[tool.poetry]
name = "prime_ya2516"
version = "0.1.0"
description = "python package for determining prime numbers"
authors = ["Yuchen An"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
